fix app overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,11 +99,11 @@ body {
 /* Components Classes */
 @layer components {
   .btn {
-    @apply py-2.5 px-5 rounded-lg cursor-pointer font-semibold text-xs lg:text-base hover:brightness-90 hover:delay-75;
+    @apply py-2.5 px-5 rounded-lg cursor-pointer border-2 font-semibold text-xs lg:text-base hover:brightness-90 hover:delay-75;
   }
 
   .btn-primary {
-    @apply bg-brown text-white;
+    @apply bg-brown text-white border-brown;
   }
 
   .btn-accent {
@@ -111,7 +111,7 @@ body {
   }
 
   .btn-primary-w {
-    @apply bg-white text-brown;
+    @apply bg-white text-brown border-white;
   }
 
   .btn-accent-w {
